Fixed excessive padding and order of alignments buttons in the HTML Area toolbar

--- a/src/main/resources/assets/styles/inputtype/text/htmlarea/html-area.less
+++ b/src/main/resources/assets/styles/inputtype/text/htmlarea/html-area.less
@@ -8,7 +8,11 @@
   .cke_top {
     position: sticky;
     top: 40px;
-    padding: 6px 8px 6px;
+    padding: 6px 8px 0;
+
+    .cke_toolgroup {
+      margin-bottom: 4px;
+    }
   }
 
   .cke_bottom {
